# fastapi-all

./: Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-deploy-test.yml  build-deploy.yml
alembic/versions/: 20af1338b338_add_foreign_key_to_post_table.py  5c9d3bbf098a_add_content_column_to_posts.py  62c130510afd_create_posts_table.py  b43fe7cabf99_add_user_table.py  cda45b942baa_auto_vote.py  ecb56ea97377_add_missing_columns_to_posts.py
app/: config.py  database.py  main.py  models.py  oath2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_post.py  test_users.py  test_votes.py
