[tool.poetry]
name = "fastapi-all"
version = "0.1.0"
description = ""
authors = ["Iwo <kosmala.iwo@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_all"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2 = "^2.9.7"
sqlalchemy = "^2.0.19"
email-validator = "^2.0.0.post2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
